# libproject

./: .coveralls.yml  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LPROJ4.json.in  README.md  example.json  libproj_subdirs.pro  lproj4.pro  lproj4_global.h  lproj4constants.h  lproj4plugin.cpp  lproj4plugin.h  notes.txt
build-libproj_subdirs-Desktop_Qt_5_4_0_GCC_64bit-Debug/: Makefile
build-libproj_subdirs-Desktop_Qt_5_4_0_GCC_64bit-Debug/libproj_test/: Makefile  libproj_test.json
build-libproj_subdirs-Desktop_Qt_5_4_0_GCC_64bit-Debug/src/: Makefile  Makefile.libproj  libproj.json
build-libproj_subdirs-Desktop_Qt_5_4_0_GCC_64bit-Debug/src/.moc/debug-shared/: moc_libprojplugin.cpp
cmake/Modules/: FindClangFormat.cmake  FindDOXYGEN.cmake  FindGCOV.cmake  FindGCOVR.cmake  FindGMock.cmake  FindQt5CMakeModules.cmake  FindQtC.cmake  FindQtCSource.cmake
doc/: CMakeLists.txt  Doxyfile  Doxyfile.in
include/: CMakeLists.txt
include/libproject/: libproject.h  libproject_error.h
libproj_subdirs/: libproj_subdirs.pro  qt-json.files  qt-json.includes
libproj_subdirs/libproj_test/: libproj_test.json.in  libproj_test.pro  libproj_test_global.h  libproj_testconstants.h  libproj_testplugin.cpp  libproj_testplugin.h
libproj_subdirs/src/: libproj.pro  libprojplugin.cpp
libproject/: CMakeLists.txt  do_coverage.sh
libproject/src/: CMakeLists.txt  libproject.cpp  libproject.h  libproject_error.h
libproject/test/: CMakeLists.txt  libprojecttest.cpp
libproject/test/project_files/single/: normal.libproject
libproject/test/project_files/testaddtonested/broken/: broken.libproject
libproject/test/project_files/testaddtonested/presentsubproject/: sub.libproject
libproject/test/project_files/testaddtosingle/: mainproject_addnested.libproject
libproject/test/project_files/testremove/sub/: s1.libproject
samples/frontend/qtc-plugin/: README.md  libproj.pro  libproj_global.h  libprojconstants.h  libprojplugin.cpp  libprojplugin.h  libprojplugin.mimetypes.xml  libprojproject.cpp  libprojproject.h  libprojprojectfactory.cpp  libprojprojectfactory.h  libprojprojectfile.cpp  libprojprojectfile.h  libprojprojectmanager.cpp  libprojprojectmanager.h  libprojprojectnodes.cpp  libprojprojectnodes.h
samples/frontend/qtc-plugin/wizard/: file.libproject
samples/utils/load-qtc-plugin/: CMakeLists.txt  load_plugin.cpp
src/: CMakeLists.txt  example.json  install_wizard.sh  libproj_global.h  libprojconstants.h  libproject.cpp  libprojplugin.cpp  libprojplugin.h
src/fileset/: Doxyfile  fileset.cpp  fileset.h  fileset.pro
src/libproject/: libproject.cpp  libproject.h  libproject.pro  libproject_error.h
src/libprojplugin/: libproj.pro  libproj_global.h  libprojconstants.h  libprojfilesetloaders.cpp  libprojfilesetloaders.h  libprojinterface.cpp  libprojinterface.h  libprojplugin.cpp  libprojplugin.cpp.autosave  libprojplugin.h  libprojplugin.qrc  libprojproject.cpp  libprojproject.h  libprojprojectfactory.h  libprojprojectfile.cpp  libprojprojectfile.h  libprojprojectmanager.cpp  libprojprojectmanager.h  libprojprojectnodes.cpp  libprojprojectnodes.h  proj.json.in
src/libprojw/: file.cpp  file.h  file.libproject  wizard.json
swig/: libproject.swig  runswig.sh
test/: CMakeLists.txt  libprojecttest.cpp  libprojtest.json.in  libprojtest.pro  libprojtest_global.h  libprojtestconstants.h  libprojtestplugin.cpp  libprojtestplugin.h
test/filesetmock/: filesetmock.cpp  filesetmock.h  filesetmock.pro
test/filesettest/: filesettest.cpp  filesettest.pro
test/filesettest/project_files/: broken.libproject  filesarrayisstring.libproject  inconsistent.libproject  nofilesarray_digit.libproject  nofilesarray_string.libproject  noprojectkey.libproject  normal.libproject  notrelevant.libproject  withnullfileskey.libproject  withnullprojectkey.libproject
test/libprojecttest/: libprojecttest.cpp  libprojecttest.pro
test/libprojecttest/project_files/single/: nofileskey.libproject  notrelevantfileskey.libproject
test/libprojecttest/project_files/testaddtonested/: mainproject_addpairofregularandbroken.libproject  mainproject_addtwobrokensubprojects.libproject  mainproject_emptyvector.libproject
test/libprojecttest/project_files/testaddtonested/fortestwithonebrokenandoneregularsubprojects/: broken.libproject  normal.libproject
test/libprojecttest/project_files/testaddtonested/fortestwithoneregularandemptysubprojects/: regular.libproject
test/libprojecttest/project_files/testaddtonested/fortestwithtwobrokensubprojects/: two.libproject
test/libprojecttest/project_files/testaddtonested/fortestwithtworegularsubprojects/: nested.libproject  single.libproject
test/libprojecttest/project_files/testaddtonested/regular/: normalsingle.libproject
test/libprojecttest/project_files/testaddtonested/regular/nested/: one.libproject
test/libprojecttest/project_files/testaddtosingle/: mainproject_addbroken.libproject
test/libprojecttest/project_files/testremove/: case_1.libproject  case_4.libproject
test/libprojtest/: libprojtest.pro  libprojtestplugin.cpp  libprojtestplugin.h
test/project_files/findsubprojectbypath/: findsubproject.libproject  nosubproject.libproject
test/project_files/findsubprojectbypath/sub/: s1.libproject  s2.libproject
test/project_files/getsubprojectspaths/: getpath.libproject  getpaths.libproject  nosubprojects.libproject
test/project_files/getsubprojectspaths/sub/: s2.libproject
test/project_files/nested/sub/: s1.libproject
test/project_files/single/: filesarrayisarrayofdigits.libproject
test/project_files/testaddtonested/: mainproject_addpairofregularandempty.libproject
test/project_files/testaddtonested/regular/nested/: two.libproject
test/project_files/testaddtosingle/regular/: normalnested.libproject
test/project_files/testremove/sub/: s2.libproject
tools/: json11.pri
